# reallm

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.h.in  license.txt  package.json  readme.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build-matrix.yml  ci.yml  cmake-multi-platform.yml  release-draft.yml  release.yml
cmake/: DS_Store.scpt  FindPHP.cmake  FindSWELL.cmake  FindWDL.cmake  NSIS.template.in  clang-tidy.cmake  code-signing.cmake  cpack.cmake  linux-cross.cmake  packaging.cmake  precommit_cmake_probe.cmake  precommit_dummy.cmake  reaper-plugin.cmake  tests.cmake
cmake/vcpkg-triplets/: arch-env.cmake
include/: reascript_vararg.hpp
scripts/: ReaLlm_Lite.lua  ReaLlm_init_example.lua  reallm_lite.lua
source/: CMakeLists.txt  Data.cpp  Data.hpp  Element.cpp  Llm.cpp  Llm.hpp  Llm_old.cpp  Llm_old.hpp  Node.cpp  Node.hpp  ReaperApi.hpp  llm.cpp  llm.hpp  main.cpp  node.hpp  reaper_api.h  reascript_vararg.hpp
src/: CMakeLists.txt  Network.hpp  main.cpp  network.h  network_test.cpp  precommit_cpp_probe.cpp  reallm.cpp  reallm.h  reallm.hpp  reallm2.cpp  reallm2.hpp  reaper_vararg.h  reaper_vararg.hpp
